--- a/gif.html
+++ b/gif.html
@@ -4,13 +4,14 @@
 <head>
   <title>Cute Gif</title>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="10;url=index.html" />
       
 
 </head>
 
 <body>
     <div style="position: absolute; left: 0; top: 0;">
-        <img src="images/How are you feeling.jpg" style="position: relative; top: 0px; left: 0px; width: cover; height: cover;"/>
+        <img src="images/How are you feeling.png" style="position: relative; top: 0px; left: 0px; width: cover; height: cover;"/>
         <img src="gifs/1.gif" style="position: absolute; top: 10%; left: 10%; width: 80%; height: 80%;"/>
     </div>
 
