--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <div style="position: absolute; left: 0; top: 0;">
-        <img src="images/How are you feeling.jpg" style="position: relative; top: 0px; left: 0px; width: cover; height: cover;"/>
-        <a href="face1.html" id="face1" ><img src="images/face1.jpg" style="position: absolute; top: 50%; left: 10%; width:15%; height:20%;"/></a>
-        <a href="face2.html" id="face1" ><img src="images/face2.jpg" style="position: absolute; top: 50%; left: 30%; width:15%; height:20%;"/></a>
-        <a href="face3.html" id="face1" ><img src="images/face3.jpg" style="position: absolute; top: 50%; left: 50%; width:15%; height:20%;"/></a>
-        <a href="face4.html" id="face1" ><img src="images/face4.jpg" style="position: absolute; top: 50%; left: 70%; width:15%; height:20%;"/></a>
+        <img src="images/How are you feeling.png" style="position: relative; top: 0px; left: 0px; width: cover; height: cover;"/>
+        <a href="face1.html" id="face1" ><img src="images/face1.png" style="position: absolute; top: 50%; left: 12%; width:16%; height:20%;"/></a>
+        <a href="face2.html" id="face2" ><img src="images/face2.png" style="position: absolute; top: 50%; left: 32%; width:16%; height:20%;"/></a>
+        <a href="face3.html" id="face3" ><img src="images/face3.png" style="position: absolute; top: 50%; left: 52%; width:16%; height:20%;"/></a>
+        <a href="face4.html" id="face4" ><img src="images/face4.png" style="position: absolute; top: 50%; left: 72%; width:16%; height:20%;"/></a>
     </div>
 
 </body>
