--- a/face3.html
+++ b/face3.html
@@ -10,8 +10,8 @@
 
 <body>
     <div style="position: absolute; left: 0; top: 0;">
-        <img src="images/face3transition.jpg" style="position: relative; top: 0px; left: 0px; width: cover; height: cover;"/>
-        <a href="gif.html" id="gif" ><img src="images/transitionbutton3.jpg" style="position: absolute; top: 70%; left: 35%; width:30%; height:10%;"/></a>
+        <img src="images/face3transition.png" style="position: relative; top: 0px; left: 0px; width: cover; height: cover;"/>
+        <a href="gif.html" id="gif" ><img src="images/transitionbutton3.png" style="position: absolute; top: 70%; left: 35%; width:30%; height:10%;"/></a>
     </div>
 
 </body>
